Added recordings. Updated swagger docs
